FIX(<Main.java>): renamed folder path.

--- a/src/main/resources/assets/iceandfrost/lang/en_US.lang
+++ b/src/main/resources/assets/iceandfrost/lang/en_US.lang
@@ -1,5 +1,6 @@
 item.ItemFrozenRottenFlesh.name=Frozen Rotten Flesh
+item.ItemFrostPickaxe.name=Frost Pickaxe
 
 tile.BlockFrozenCobblestone.name=Frozen Cobblestone
 
-itemGroup.tabIceAndFire=Ice and Fire
+itemGroup.tabIceAndFrost=Ice and Frost
